--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -6,9 +6,9 @@ backend:
 media_folder: "src/assets/img" # Media files will be stored in the repo under images/uploads
 public_folder: "/assets/img"
 collections:
-  - name: "magliette" # Used in routes, e.g., /admin/collections/blog
-    label: "magliette" # Used in the UI
-    folder: "data/products" # The path to the folder where the documents are stored
+  - name: "tshirt" # Used in routes, e.g., /admin/collections/blog
+    label: "T-shirt" # Used in the UI
+    folder: "data/tshirt" # The path to the folder where the documents are stored
     format : "json"
     create: true # Allow users to create new documents in this collection
     fields: # The fields for each document, usually in front matter
