--- a/admin/config.yml
+++ b/admin/config.yml
@@ -8,7 +8,7 @@ public_folder: "/assets/img"
 collections:
   - name: "tshirt" # Used in routes, e.g., /admin/collections/blog
     label: "T-shirt" # Used in the UI
-    folder: "data/tshirt" # The path to the folder where the documents are stored
+    folder: "tshirt" # The path to the folder where the documents are stored
     format : "json"
     create: true # Allow users to create new documents in this collection
     fields: # The fields for each document, usually in front matter
@@ -28,7 +28,7 @@ collections:
 
   - name: "products" # Used in routes, e.g., /admin/collections/blog
     label: "Product" # Used in the UI
-    folder: "data/products" # The path to the folder where the documents are stored
+    folder: "products" # The path to the folder where the documents are stored
     format : "json"
     create: true # Allow users to create new documents in this collection
     fields: # The fields for each document, usually in front matter
