--- a/admin/config.yml
+++ b/admin/config.yml
@@ -8,8 +8,7 @@ public_folder: "/assets/img"
 collections:
   - name: "tshirt" # Used in routes, e.g., /admin/collections/blog
     label: "T-shirt" # Used in the UI
-    folder: "tshirt" # The path to the folder where the documents are stored
-    format : "json"
+    folder: "data" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     fields: # The fields for each document, usually in front matter
       # - {label: "Layout", name: "layout", widget: "hidden", default: "product"}
@@ -25,11 +24,10 @@ collections:
         required: false
         multiple: true
         options: ["tshirt", "product"]
-        
+
   - name: "products" # Used in routes, e.g., /admin/collections/blog
     label: "Product" # Used in the UI
-    folder: "products" # The path to the folder where the documents are stored
-    format : "json"
+    folder: "data" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     fields: # The fields for each document, usually in front matter
       # - {label: "Layout", name: "layout", widget: "hidden", default: "product"}
