--- a/admin/config.yml
+++ b/admin/config.yml
@@ -37,6 +37,17 @@ collections:
       - {label: "Highlight", name: "highlight", widget: "boolean", default: false, required: false }
       - {label: "Image", name: "thumbnail", widget: "image"}
       - {label: "Description", name: "description", widget: "markdown"}
+      - label: "Country"
+          name: "country"
+          widget: "list"
+          default: ["it"]
+      - label: "Testimonials"
+          name: "testimonials"
+          collapsed: false
+          widget: "list"
+          fields:
+            - {label: Quote, name: quote, widget: string, default: "Everything is awesome!"}
+            - {label: Author, name: author, widget: string }
       - label: Tags
         name: "tags"
         widget: "select"
