--- a/admin/config.yml
+++ b/admin/config.yml
@@ -21,7 +21,6 @@ collections:
       - label: Tags
         name: "tags"
         widget: "select"
-        required: false
         multiple: true
         options: ["tshirt", "products"]
 
@@ -34,7 +33,7 @@ collections:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Price", name: "price", widget: "number"}
       - {label: "Discount", name: "discount", widget: "number", required: false}
-      - {label: "Highlight", name: "highlight", widget: "boolean", default: false, required: false }
+      - {label: "Highlight", name: "highlight", widget: "boolean", default: false}
       - {label: "Image", name: "thumbnail", widget: "image"}
       - {label: "Description", name: "description", widget: "markdown"}
       - label: "Country"
@@ -51,6 +50,5 @@ collections:
       - label: Tags
         name: "tags"
         widget: "select"
-        required: false
         multiple: true
         options: ["tshirt", "products"]
