--- a/admin/config.yml
+++ b/admin/config.yml
@@ -15,7 +15,7 @@ collections:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Price", name: "price", widget: "number"}
       - {label: "Discount", name: "discount", widget: "number", required: false}
-      - {label: "Highlight", name: "highlight", widget: "boolean", default: false }
+      - {label: "Highlight", name: "highlight", widget: "boolean", default: false, required: false}
       - {label: "Image", name: "thumbnail", widget: "image"}
       - {label: "Description", name: "description", widget: "markdown"}
       - label: Tags
@@ -33,7 +33,7 @@ collections:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Price", name: "price", widget: "number"}
       - {label: "Discount", name: "discount", widget: "number", required: false}
-      - {label: "Highlight", name: "highlight", widget: "boolean", default: false}
+      - {label: "Highlight", name: "highlight", widget: "boolean", default: false, required: false}
       - {label: "Image", name: "thumbnail", widget: "image"}
       - {label: "Description", name: "description", widget: "markdown"}
       - label: "Country"
