--- a/admin/config.yml
+++ b/admin/config.yml
@@ -17,7 +17,7 @@ collections:
       - {label: "Discount", name: "discount", widget: "number", required: false}
       - {label: "Highlight", name: "highlight", widget: "boolean", default: false, required: false}
       - {label: "Image", name: "thumbnail", widget: "image"}
-      - {label: "Description", name: "description", widget: "markdown"}
+      - {label: "Description", name: "description", widget: "text"}
       - label: Tags
         name: "tags"
         widget: "select"
@@ -35,7 +35,7 @@ collections:
       - {label: "Discount", name: "discount", widget: "number", required: false}
       - {label: "Highlight", name: "highlight", widget: "boolean", default: false, required: false}
       - {label: "Image", name: "thumbnail", widget: "image"}
-      - {label: "Description", name: "description", widget: "markdown"}
+      - {label: "Description", name: "description", widget: "text"}
       - label: "Country"
         name: "country"
         widget: "list"
