--- a/pingendo/config.yml
+++ b/pingendo/config.yml
@@ -2,5 +2,6 @@ index_path: "index.html"
 #sources_path : "src/"
 netlify_site_name : peleventy
 production_branch : master
+defaultBranch: master
 # editable_selector : "a, p, h1,h2,h3,h4,h5, button,ul,li"
 has_components : true
